--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -8,6 +8,8 @@ one:
   code: K32 RW26 
   latitude: 1.5
   longitude: 1.5
+  localizable_id: 1
+  localizable_type: Volunteer
 
 two:
   line1: 127  
@@ -15,8 +17,10 @@ two:
   city: Balgriggan
   county: Dublin
   code: K32 RW26 
-  latitude: 
-  longitude: 
+  latitude: 1.2 
+  longitude: 1.3 
+  localizable_id: 2
+  localizable_type: Volunteer
 
 three:
   line1: 127 Newhaven 
