--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,17 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-# one: {}
-# column: value
-#
-# two: {}
-#  column: value
+owner:
+  id: 1
+  first_name: Mark
+  last_name: Markus
+  email: m@m.com
+  password_digest: xjllhi30909
+  ownership: 1
+
+moderator:
+  id: 2
+  first_name: Joan
+  last_name: Johanson
+  email: j@j.com
+  password_digest: kjljk;laf99934
+  ownership: 0
+  
