--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,6 @@ test:
   <<: *default
   database: bettertogether-test 
 
-# production:
-#   <<: *default
-#   database:
+production:
+  <<: *default
+  database:
